<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_settings">Settings</string>
    <string name="app_name">CeliEye</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info">Infos</string>
    <string name="action_search">Search</string>
    <string name="title_activity_design">Design</string>
    <string name="title_activity_not_available">Not Available</string>
    <string name="title_activity_parse_json">ParseJSON</string>
    <string name="title_activity_release_notes">Release Notes</string>
    <string name="title_activity_to_do">ToDo</string>
    <string name="Release4">- Fun Fact: This app walks like a dinosaur.</string>
    <string name="Release3">- Fixed Graphics</string>
    <string name="Release2">- The app now scans elements</string>
    <string name="Release1">- Bug Fixes</string>
    <string name="ReleaseCodename">Quantum Dinosaur</string>
    <string name="ReleaseVersion">Version 0.0.6a</string>
    <string name="SettingsQuantum">Quantum Design Test Area</string>
    <string name="SettingsToDO">To Do</string>
    <string name="SettingsRelease">Release Notes</string>
    <string name="SettingsInfo">Infos</string>
    <string name="AppName">CeliEye</string>
    <string name="InfoVersion">PREVIEW 3</string>
    <string name="InfoCopyright">Made by Eugenio &amp; Nicola Gigante. Some informations in our database might not be correct, so please don \'t trust us 100%.</string>
    <string name="NotAvailable">This feature is not available yet.</string>
    <string name="EyeScan">Touch the camera to start scanning.</string>
    <string name="ToDoTitle">To Do.</string>
    <string name="ToDo1">- Integrate Thread</string>
    <string name="ToDo2">- Finish the graphics</string>
    <string name="ToDo3">- Build Success/Failure Graphics</string>
    <string name="ToDo4">- Make this list prehistoric</string>
    <string name="title_activity_async_task_http_post">AsyncTaskHttpPost</string>
    <string name="title_activity_good">Gluten-free product</string>
    <string name="good">This product is gluten-free!</string>
    <string name="bad">This is NOT a gluten-free product!</string>
    <string name="title_activity_bad">Product with gluten</string>
    <string name="error">Is this an error? Report it by tapping here.</string>
    <string name="status_text_default"></string>
    <string name="progress_dialog_title_connecting">Connecting...</string>
    <string name="progress_dialog_message_prefix_connecting"></string>
    <string name="progress_dialog_title_downloading">Downloading...</string>
    <string name="progress_dialog_message_prefix_downloading"></string>
    <string name="user_message_download_complete">Download Completed.</string>
    <string name="user_message_download_canceled">Download Cancelled.</string>
    <string name="error_message_general">Ooops, we have an error!</string>
    <string name="error_message_file_not_found">I didn \'t find the file, sorry.</string>
    <string name="error_message_bad_url">Huston, we have a bad URL!</string>
    <string name="ForceDatabase">Update manually the database</string>
    <string name="downloader">Update manually the database</string>
    <string name="updateinfo">Manually updating the database may require up to five minutes to complete, but may fix some problems you may encounter when scanning or browsing it. You need it if it \'s the first time running CeliEye. To start updating the database, press the button below.</string>
    <string name="devupdate">This is the address which is used to download the database. Should be hidden to the end-user.</string>
    <string name="cart">Cart</string>
    <string name="title_activity_cart">Cart</string>
    <string name="cart_intro">Keep track of gluten-free foods.</string>
    <string name="learnmore">Learn more.</string>
    <string name="notavailable">This feature is not available in the Previews of CeliEye.</string>
    <string name="addcart">Add to Cart.</string>
    <string name="title_activity_test_db">TestDB</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_downloader">Downloader</string>
    <string name="title_activity_first">CeliEye</string>
    <string name="welcome">Welcome to CeliEye.</string>
    <string name="introduction">A snap is all it takes to know if what you\'re buying is gluten-free.</string>
    <string name="configure">Configure CeliEye.</string>
    <string name="title_activity_splash">Splash</string>
    <string name="thank">Thanks to</string>
    <string name="title_activity_finish_tutorial">FinishTutorial</string>
    <string name="finish">Finish the Tutorial.</string>
    <string name="congrats">Congrats!</string>
    <string name="tutfinish">You\'ve successfully finished the tutorial! You now only need to download the database from the next screen to get started.</string>
    <string name="nextstep">Next Step</string>
    <string name="title_activity_basics_tut">BasicsTut</string>
    <string name="basicstut">Get to know the basics.</string>
    <string name="carttut">This is the Cart. You can save gluten-free products here.</string>
    <string name="searchtut">This is the Search. You can manually search products here.</string>
    <string name="settingstut">This is the Menu. If you don\'t see this icon in the main screen, press the \'menu\' key to show it.</string>
    <string name="scantut">You can start a scan by pressing the button below.</string>
    <string name="title_activity_test_read_write_file">TestReadWriteFile</string>
    <string name="searchhint">Type something...</string>
    <string name="help">Infos</string>
    <string name="title_activity_infobuttontut">infobuttontut</string>
    <string name="title_activity_segnala_prodotto">Advise a Product</string>
    <string name="barcodesegnala">BARCODE</string>
    <string name="namesegnala">BRAND NAME</string>
    <string name="descriptionsegnala">PRODUCT DESCRIPTION</string>
    <string name="toast_segnalazione">Product sucessfully advised.</string>

</resources>
