<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nicolagigante.celieye.activity.ToDo">

    <TextView
        android:text="@string/ToDoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:id="@+id/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToDo1"
        android:id="@+id/textView"
        android:textSize="24dp"
        android:layout_below="@+id/todo"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToDo2"
        android:id="@+id/textView2"
        android:textSize="24dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToDo3"
        android:id="@+id/textView3"
        android:textSize="24dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToDo4"
        android:id="@+id/textView4"
        android:textSize="24dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
