
<RelativeLayout
    android:theme="@android:style/Theme.NoTitleBar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:id="@+id/textView"
        android:textSize="34dp"
        android:textIsSelectable="false"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InfoVersion"
        android:id="@+id/textView2"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InfoCopyright"
        android:id="@+id/textView3"
        android:layout_alignWithParentIfMissing="true"
        android:textStyle="italic"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:background="@drawable/ic_launcher"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>