<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nicolagigante.celieye.activity.BasicsTut"
    android:background="@drawable/ic_actionbar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicstut"
        android:id="@+id/textView"
        android:textStyle="italic"
        android:textSize="28dp"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/cart"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carttut"
        android:id="@+id/textView2"
        android:layout_marginLeft="11dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_alignTop="@+id/imageView"
        android:textColor="#ffffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/ic_action_search"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchtut"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/textView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/settings"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/imageView2"
        android:layout_toLeftOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingstut"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignBottom="@+id/imageView3"
        android:textColor="#ffffffff"
        android:layout_alignRight="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scantut"
        android:id="@+id/textView5"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignLeft="@+id/imageView3"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_marginTop="23dp"
        android:background="@drawable/button_circle"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first"
        android:onClick="stepnext"
        android:background="@drawable/next_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextstep"
        android:id="@+id/textView6"
        android:layout_marginLeft="40dp"
        android:layout_alignBaseline="@+id/first"
        android:layout_alignBottom="@+id/first"
        android:layout_alignLeft="@+id/first"
        android:textColor="#ff000000" />


</RelativeLayout>
