<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    >
<TextView
    android:id="@+id/status_text_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/status_text_default"
    />
<EditText
    android:id="@+id/url_input"
    android:text="http://unisalerno.altervista.org/upload/dbaic.db"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/download_button"
    android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateinfo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devupdate"
        android:id="@+id/textView2"
        android:layout_above="@+id/url_input"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <Button
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/update"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
